--- a/theme/css/responsive.css
+++ b/theme/css/responsive.css
@@ -2,6 +2,13 @@
 
 .btn-success {
     background-color:#4e9a06;
+    color: #fff !important;
+}
+
+.btn {
+    text-decoration: none;
+    border-radius: 6px;
+    padding: 6px 30px;
 }
 
 .col-centered{
@@ -14,6 +21,17 @@
    margin: 0 !important;
 }
 
+/* Make equal height columns */
+
+@media screen and (min-width: 768px) {
+    .equalizer, .equalizer > div[class*='col-'] {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+    }
+}
+
 /*--------------General------------------------*/
 @media(max-width: 767px) {
     img {
@@ -24,7 +42,7 @@
         text-align: justify;
     }
 }
-@media(min-width: 767px){
+@media(min-width: 768px){
     #header {
         margin-bottom: 20px;
     }
@@ -70,8 +88,7 @@
     letter-spacing: 2px;
     line-height: 100%;
     padding: 1%;
-/*    margin-top: 10px; 
-*/}
+ }
 
 .plus-pull {
     color: white;
@@ -154,7 +171,7 @@
         }
     }
 
-    @media (min-width:767px) and  (max-width: 979px){
+    @media (min-width:768px) and  (max-width: 991px){
         .menu-globalnav-container {
             width: 724px;
         }
@@ -213,21 +230,12 @@
     .crafted_content .section h2, .crafted_content .section h3 {
         text-align: center;
     }
-    #support-gnome .title, #support-gnome h3, #support-gnome .links,
     .crafted_content .section .text{
         text-align: center;
     }
     .crafted_content .section .image img{
         margin: auto;
     }
-}
-
-/*-----------------list adjustments-----------*/
-@media (max-width: 979px) {
-    li {
-        margin-left: 0px;
-/*        line-height: 1.6px;
-*/    }
 }
 
 
@@ -253,7 +261,7 @@
 .foundation_board img {
     margin: auto !important;
 }
-@media (min-width: 360px) and (max-width: 767px) {
+@media (min-width: 360px) and (max-width: 768px) {
     .foundation_board {
         -moz-column-count: 2 !important;
         -webkit-column-count: 2 !important;
@@ -266,7 +274,7 @@
         display: none;
     }
 }
-@media (max-width: 979px) {
+@media (max-width: 991px) {
     .foundation_board li{
         text-align: center;
     }
@@ -286,7 +294,7 @@
     }
 
 }
-@media(min-width: 767px){
+@media(min-width: 768px){
     #container.two_columns .sidebar {
         width: 220px;
     }
@@ -403,7 +411,7 @@
 }
 
 /*-----------------Tablets------------------------*/
-@media (min-width:767px) and (max-width: 990px){
+@media (min-width:768px) and (max-width: 991px){
     header {
         padding-bottom: 30px;
     }
